# req

./: .gitignore  AGENTS.md  CHANGELOG.md  CONSTITUTION.md  MIGRATION.md  README.md
.claude/: settings.local.json
config/: language.yml
conflicts/: CONFLICT-001.md  CONFLICT-002.md  CONFLICT-003.md  CONFLICT-004.md  CONFLICT-005.md  README.md
docs/: changelog.md  example-walkthrough.md  glossary.md  installation.md  measurement-phase0-baseline.md  metrics.md  optimization-recommendations.md  permissions.md  req-cli.md  speckit-comparison.md  v2-market-comparison.md  (+1 more)
src/backend/: Dockerfile  docker-compose.yml  pyproject.toml
src/backend/app/: main.py
src/backend/app/api/: audit.py  auth.py  combos.py  connections.py  dashboards.py  etl.py  inventory.py  mappings.py  mrp.py  procurement.py  reports.py  schema.py  sync.py
src/backend/app/audit/: analyzer.py  logger.py
src/backend/app/auth/: ad_connector.py  rbac.py  service.py
src/backend/app/connectors/: base.py  oracle.py  postgresql.py  registry.py
src/backend/app/core/: config.py  database.py  models.py  security.py
src/backend/app/dashboards/: mis_controls.py  pm_dashboard.py  quality_dashboard.py  sync_dashboard.py
src/backend/app/etl/: bi_service.py  dashboard_service.py  models.py  pipeline_service.py
src/backend/app/market/: combo_service.py  inventory_service.py  procurement_service.py  report_service.py
src/backend/app/mrp/: bom_service.py  crp_service.py  models.py  mps_service.py  mrp_runner.py
src/backend/app/sync/: batch_scheduler.py  cdc_listener.py  mapping.py  monitoring.py
(+202 files in other folders)
